# mcp-proxy

./: .coverage  .env.example  .gitignore  API_RESTRUCTURING_COMPLETE.md  API_RESTRUCTURING_SUMMARY.md  MCP_PROXY_README.md  MIGRATION_SUMMARY.md  README.md  REGISTRY_API.md  SERVER_TERMINOLOGY_UPDATE.md  SETUP.md  TEST_CASES.md  alembic.ini  coverage.xml  example_usage.py  hub-mcp.py  mcp_proxy_server.py  pyproject.toml  requirements.txt  test_capability_discovery.py  test_fix.py  test_fix_registry.py  test_mcp_proxy_server.py  test_registry.py  test_server.py
alembic/: env.py
alembic/versions/: 6ca76deb2ed2_initial_schema.py  8453bdcb9d65_initial_schema_with_json_columns.py
docs/: api.md  architecture.md  cli.md  deployment.md  development.md
docs/knowledge_base/: architecture.md  development.md
examples/: modular_api_example.py
mcp_registry/: __init__.py
mcp_registry/api/: __init__.py  app.py  exception_handlers.py
mcp_registry/api/routes/: capabilities.py  discovery.py  health.py  proxy.py  servers.py
mcp_registry/cli/: __init__.py  main.py
mcp_registry/cli/commands/: __init__.py  config.py  database.py  discovery.py  proxy.py  server.py
mcp_registry/core/: __init__.py  config.py  database.py  exceptions.py  fastmcp_client.py
mcp_registry/database/: __init__.py  base.py  models.py  repositories.py
mcp_registry/database/migrations/: env.py
mcp_registry/db/: __init__.py  models.py
mcp_registry/models/: __init__.py  base.py  capability.py  server.py
mcp_registry/repositories/: __init__.py  capability.py  server.py
mcp_registry/scripts/: __init__.py  init_db.py
mcp_registry/services/: __init__.py  discovery.py  proxy.py  registry.py
registry/: __init__.py  api.py  capability_discovery.py  database.py  models.py
src/mcp_proxy_hub/: __init__.py  app.py  config.py  discovery.py  health.py  main.py  models.py  routes.py  security.py  session.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_data.py
tests/integration/: __init__.py  test_api.py
tests/test_api/: __init__.py
tests/test_cli/: __init__.py
tests/test_models/: __init__.py
tests/test_repositories/: __init__.py
tests/test_services/: __init__.py
tests/unit/: __init__.py  test_config.py  test_models.py  test_security.py
